--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<meta name="keywords" content="map, wms, tms, wmts">
 		<title>WorldMiniMap</title>
 		<!-- leaflet.css und leaflet.js von externer Quelle einbinden -->
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" />
-		<script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+		<script src="https://cdn.jsdelivr.net/npm/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
 		<script src="dist/Control.WorldMiniMap.js"></script>
 	</head>
 	<body style="margin:0;padding:0;background-color:#f0f0f0;width:100vw;height:100vh;">
@@ -18,7 +18,7 @@
 			<div id="map" style="background-color:#ffffff;width:100%;height:100%;"></div>
 			<script type='text/javascript'>
 				// create map and implicitly create WorldMiniMap-Control and prevent creation of zoom-Control
-				var map = new L.Map('map', {zoomControl: false, worldMiniMapControl: true});
+				var map = new L.Map('map', {worldMiniMapControl: true});
 				var osmUrl='https://{s}.tile.openstreetmap.de/{z}/{x}/{y}.png';
 				var osmAttrib='Map data &copy; OpenStreetMap contributors';
 				var osm = new L.TileLayer(osmUrl, {minZoom: 0, maxZoom: 20, attribution: osmAttrib});
