--- a/tpo.html
+++ b/tpo.html
@@ -9,8 +9,8 @@
 		<meta name="keywords" content="map, wms, tms, wmts">
 		<title>WorldMiniMap</title>
 		<!-- leaflet.css und leaflet.js von externer Quelle einbinden -->
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" />
-		<script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+		<script src="https://cdn.jsdelivr.net/npm/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
 		<script src="dist/Control.WorldMiniMap.js"></script>
 	</head>
 	<body style="margin:0;padding:0;background-color:#f0f0f0;width:100vw;height:100vh;">
@@ -19,7 +19,7 @@
 			<script type='text/javascript'>
 				var map = new L.Map('map');
 				// create WorldMiniMap with some options and add to map
-				var worldMiniMap = L.control.worldMiniMap({position: 'bottomleft', style: {opacity: 0.9, borderRadius: '0px', backgroundColor: 'lightblue'}}).addTo(map);
+				var worldMiniMap = L.control.worldMiniMap({position: 'topright', style: {opacity: 0.9, borderRadius: '0px', backgroundColor: 'lightblue'}}).addTo(map);
 				var tpoUrl='https://sgx.geodatenzentrum.de/wmts_topplus_open/tile/1.0.0/web/default/WEBMERCATOR/{z}/{y}/{x}.png';
 				var tpoAttrib='<a href="https://www.bkg.bund.de/" target="_blank">Bundesamt für Kartographie und Geodäsie</a>';
 				var tpo = new L.TileLayer(tpoUrl, {minZoom: 0, maxZoom: 19, attribution: tpoAttrib});
