--- a/tpo.html
+++ b/tpo.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="de">
+<html lang="de" style="height:100%;">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,9 +13,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
 		<script src="dist/Control.WorldMiniMap.js"></script>
 	</head>
-	<body style="margin:0;padding:0;background-color:#f0f0f0;width:100vw;height:100vh;">
-		<main style="width:100%;height:100%;">
-			<div id="map" style="background-color:#ffffff;width:100%;height:100%;"></div>
+	<body style="margin:0;padding:0;background-color:#f0f0f0;height:100%;">
+		<main style="height:100%;">
+			<div id="map" style="background-color:#ffffff;height:100%;"></div>
 			<script type='text/javascript'>
 				var map = new L.Map('map');
 				// create WorldMiniMap with some options and add to map
