--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script type="importmap">{
 			"imports": {
 				  "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js"
-				, "WorldMiniMap": "http://localhost/WorldMiniMap/dist/WorldMiniMap.js"
+				, "WorldMiniMap": "https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@master/dist/WorldMiniMap.js"
 			}
 		}</script>
 	</head>
@@ -34,4 +34,5 @@
 			</script>
 		</main>
 	</body>
+
 </html>
