--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 		<script type="importmap">{
 			"imports": {
 				  "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js"
-				, "WorldMiniMap": "https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@master/dist/WorldMiniMap.js"
+				, "WorldMiniMap": "https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@2.0.0/dist/WorldMiniMap.js"
 				, "leaflet-burgermenu": "https://unpkg.com/leaflet-burgermenu@latest/dist/leaflet-burgermenu.esm.min.js"
 			}
 		}</script>
@@ -93,3 +93,4 @@
 	</body>
 
 </html>
+
