--- a/tpo.html
+++ b/tpo.html
@@ -13,7 +13,7 @@
 		<script type="importmap">{
 			"imports": {
 				  "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js"
-				, "WorldMiniMap": "https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@master/dist/WorldMiniMap.js"
+				, "WorldMiniMap": "https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@2.0.0/dist/WorldMiniMap.js"
 			}
 		}</script>
 	</head>
@@ -41,3 +41,4 @@
 	</body>
 
 </html>
+
