--- a/test.html
+++ b/test.html
@@ -84,7 +84,7 @@
 						},
 						{
 							title: 'remove WorldMiniMap_yellow',
-							onClick: () => { wMM.remove (); },
+							onClick: () => { wMM_yellow.remove (); },
 						},
 					]
 				}).addTo(map);
@@ -93,4 +93,5 @@
 	</body>
 
 </html>
+
 
